--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,36 @@
                         </div>
                     </div>
                 </div>
+                <table id="invoice-table">
+                    <thead>
+                        <tr>
+                            <th scope="col">LP</th>
+                            <th scope="col">Nazwa towaru</th>
+                            <th scope="col">Ilość</th>
+                            <th scope="col">Cenna netto</th>
+                            <th scope="col">Wartość nett</th>
+                            <th scope="col">VAT</th>
+                            <th scope="col">Wartość VAT</th>
+                            <th scope="col">Wartość brutto</th>
+                        </tr>
+                    </thead>
+                    <tbody id="invoice-table-tbody">
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th scope="row" colspan="5">W tym</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <th scope="row" colspan="5">Razem</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tfoot>
+                </table>
                 <button type="submit">Submit</button>
             </form>
         </div>
