Add table foot ids

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
                     </thead>
                     <tbody id="invoice-table-tbody">
                     </tbody>
-                    <tfoot>
+                    <tfoot id="invoice-table-tfoot">
                         <tr>
                             <th scope="row" colspan="5">W tym</th>
                             <td></td>
@@ -104,9 +104,10 @@
                         </tr>
                         <tr>
                             <th scope="row" colspan="5">Razem</th>
+                            <td id="total-total-net" name="totalTotalNet"></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td id="total-net-amount" name="totalNetAmount"></td>
+                            <td id="total-total-gross" name="totalTolatGross"></td>
                         </tr>
                     </tfoot>
                 </table>
