Fixes and init values

--- a/public/index.html
+++ b/public/index.html
@@ -97,17 +97,17 @@
                     </tbody>
                     <tfoot id="invoice-table-tfoot">
                         <tr>
-                            <th scope="row" colspan="5">W tym</th>
+                            <th scope="row" colspan="4">W tym</th>
                             <td></td>
                             <td></td>
                             <td></td>
                         </tr>
                         <tr>
-                            <th scope="row" colspan="5">Razem</th>
-                            <td id="total-total-net" name="totalTotalNet"></td>
+                            <th scope="row" colspan="4">Razem</th>
+                            <td id="total-total-net" name="totalTotalNet">0</td>
                             <td></td>
-                            <td id="total-net-amount" name="totalNetAmount"></td>
-                            <td id="total-total-gross" name="totalTolatGross"></td>
+                            <td id="total-vat-amount" name="totalVatAmount">0</td>
+                            <td id="total-total-gross" name="totalTolatGross">0</td>
                         </tr>
                     </tfoot>
                 </table>
