Add item button

--- a/public/index.html
+++ b/public/index.html
@@ -106,11 +106,12 @@
                             <th scope="row" colspan="4">Razem</th>
                             <td id="total-total-net" name="totalTotalNet">0</td>
                             <td></td>
-                            <td id="total-vat-amount" name="totalVatAmount">0</td>
+                            td id="total-vat-amount" name="totalVatAmount">0</td>
                             <td id="total-total-gross" name="totalTolalGross">0</td>
                         </tr>
                     </tfoot>
                 </table>
+                <button type="button" id="add-item-btn">Add item</button>
                 <button type="submit">Submit</button>
             </form>
         </div>
