--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="field">
                             <label>Bank: 
-                                <input type="text" name="seller[bankName] />
+                                <input type="text" name="seller[bankName]" />
                             </label>
                         </div>
                         <div class="field">
@@ -106,7 +106,7 @@
                             <th scope="row" colspan="4">Razem</th>
                             <td id="total-total-net" name="totalTotalNet">0</td>
                             <td></td>
-                            td id="total-vat-amount" name="totalVatAmount">0</td>
+                            <td id="total-vat-amount" name="totalVatAmount">0</td>
                             <td id="total-total-gross" name="totalTolalGross">0</td>
                         </tr>
                     </tfoot>
