Generate total due based on total gross

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
                 </div>
                 <div class="total-due">
                     <label>Do zaplaty
-                        <input type="text" name="totalDue" readonly>
+                        <input type="text" name="totalDue" id="total-due" readonly>
                     </label>
                 </div>
                 <button type="button" id="add-item-btn">Add item</button>
