--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,6 @@
             </form>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
