--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                             <td id="total-total-net" name="totalTotalNet">0</td>
                             <td></td>
                             <td id="total-vat-amount" name="totalVatAmount">0</td>
-                            <td id="total-total-gross" name="totalTolalGross">0</td>
+                            <td id="total-total-gross" name="totalTotalGross">0</td>
                         </tr>
                     </tfoot>
                 </table>
