--- a/public/index.html
+++ b/public/index.html
@@ -98,16 +98,17 @@
                     <tfoot id="invoice-table-tfoot">
                         <tr>
                             <th scope="row" colspan="4">W tym</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td id="in-total-net">0</td>
+                            <td id="in-vat"></td>
+                            <td id="in-vat-amount">0</td>
+                            <td id="in-total-gross">0</td>
                         </tr>
                         <tr>
                             <th scope="row" colspan="4">Razem</th>
-                            <td id="total-total-net" name="totalTotalNet">0</td>
+                            <td id="total-total-net">0</td>
                             <td></td>
-                            <td id="total-vat-amount" name="totalVatAmount">0</td>
-                            <td id="total-total-gross" name="totalTotalGross">0</td>
+                            <td id="total-vat-amount">0</td>
+                            <td id="total-total-gross">0</td>
                         </tr>
                     </tfoot>
                 </table>
