--- a/public/index.html
+++ b/public/index.html
@@ -113,13 +113,13 @@
                     </tfoot>
                 </table>
                 <div class="summary">
-                    <label>Wartosc netto 
+                    <label>Wartość netto 
                         <input type="text" name="summary[totalNetPrice]" id="summary-total-net-price" readonly />
                     </label>
-                    <label>Wartosc VAT 
+                    <label>Wartość VAT 
                         <input type="text" name="summary[vatAmount]" id="summary-vat-amount" readonly />
                     </label>
-                    <label>Wartosc brutto 
+                    <label>Wartość brutto 
                         <input type="text" name="summary[totalGrossPrice]" id="summary-total-gross-price" readolny />
                     </label>
                 </div>
@@ -137,12 +137,12 @@
                     </label>
                 </div>
                 <div class="total-due">
-                    <label>Do zaplaty
+                    <label>Do zapłaty
                         <input type="text" name="totalDue" id="total-due" readonly>
                     </label>
                 </div>
-                <button type="button" id="add-item-btn">Add item</button>
-                <button type="submit">Submit</button>
+                <button type="button" id="add-item-btn">Dodaj</button>
+                <button type="submit">Dalej</button>
             </form>
         </div>
     </div>
