Style seller and buyer

--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
                     </div>
                 </div>
                 <hr>
-                <div class="f-row">
-                    <div class="seller">
+                <div class="f-row sides">
+                    <div class="f-col side side-rp">
                         <div class="field">
                             <label>Dane firmy: 
                                 <textarea name="seller[companyInfo]" rows="4" cols="40" ></textarea>
@@ -67,7 +67,7 @@
                             </label>
                         </div>
                     </div>
-                    <div class="buyer">
+                    <div class="f-col side">
                         <div class="field">
                             <label>Dane firmy: 
                                 <textarea name="buyer[companyInfo]" rows="4" cols="40" ></textarea>
