--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                 </div>
-                <table id="invoice-table">
+                <table id="invoice-table" class="tp">
                     <thead>
                         <tr>
                             <th scope="col">LP</th>
@@ -112,7 +112,7 @@
                         </tr>
                     </tfoot>
                 </table>
-                <div class="summary">
+                <div class="summary tp">
                     <div class="f-col">
                         <label>Wartość netto 
                             <input type="text" name="summary[totalNetPrice]" id="summary-total-net-price" readonly />
